# Triangular-Transport-Toolbox

./: README.md  pyproject.toml
.github/workflows/: ruff.yml  tests.yml
examples/: __init__.py
examples/data_assimilation/: utils.py
examples/data_assimilation/Example 06 - Ensemble Transport Filter/: example_06.py
examples/data_assimilation/Example 07 - Ensemble Transport Smoother/: example_07.py
examples/spiral_distribution/Example 01 - full map/: example_01.py
examples/spiral_distribution/Example 02 - partial map/: example_02.py
examples/statistical_inference/Example 03 - average temperature data/: example_03.py
examples/statistical_inference/Example 04 - Monod kinetics/: example_04.py
examples/statistical_inference/Example 05 - pushforward and pullback density/: example_05.py
src/triangular_transport_toolbox/: __init__.py  basis_functions.py  monotonicity.py  rectifier.py  transport_map.py
tests/: test_basic.py  test_write_basis_function.py
